# GO-RXR

./: .gitignore  31_635.99_S.txt  35_460.76_S.txt  833.csv  833_ReMagX.txt  833_notrough.csv  833_rough.txt  Atomic_Mass.txt  CONTRIBUTING.md  Co.ffm  Dockerfile  E1_460.76_best.txt  EM1-460-spline.csv  Examples.py  FGT-1L.all  FGT-1L.hdf5  FGT-2L-Oct27_Struct.h5  FGT-2L.all  FGT-2L.hdf5  FGT_RXR_Processing.py  Fe.ff  Full_Matrix.cpp  GUI.GO.spec  GUI_GO.py  GUI_GO.spec  Ge_R.ff  GlobalOptimization.py  Kramers_Kronig.cpp  Kramers_Kronig.pxd  Kramers_Kronig.pyx  LICENSE  LICENSE.txt  MOKE_longitudinal.cpp  MOKE_longitudinal.pxd  MOKE_longitudinal.pyx  MOKE_polar.cpp  MOKE_polar.pxd  MOKE_polar.pyx  MOKE_transversal.cpp  MOKE_transversal.pxd  (+73 more)
.github/: .gitignore
DATA/: EM1-460-fourier.csv
DOCKER/: Dockerfile
Data/: FGT-1L  FGT-2L  Jaap17.spc  Pim7uc.spc  ScanLegend_10uc.txt
GO_RXR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GUI_GO.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Magnetic_Scattering_Factor/: Co.txt  Ni.txt
PAPER/: paper.bib  paper.md
Pythonreflectivity/: Full_Matrix.pxd  Full_Matrix.pyx  MOKE_transversal.pyx  Mathematical_Functions_Reflectivity.pxd  Multilayer_Functions_Reflectivity.pyx  Pythonreflectivity.pyx  Reflectivity_Pi.pxd  Reflectivity_Sigma.pyx  Structural.pyx  setup.py
SCRIPTS/: Thesis-plots.py  data_structure.py
SF_Altered/: Ac.txt  Ca.txt  Fe.txt  Ho.txt  N.txt  Ni.txt  P.txt  Ru.txt  Sm.txt
Scattering_Factor/: Ac.txt  Ag.txt  Al.txt  As.txt  At.txt  Ba.txt  Bi.txt  Cu.txt  F.txt  Fe.txt  Fr.txt  In.txt  (+10 more)
(+147 files in other folders)
